# subconv-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  NOTICE.md  README.md  README_EN.md  config.yaml.example  docker-compose.example.yml  docker-compose.image.yml
.github/workflows/: backfill-releases.yml  docker-publish.yml
docs/: PUBLISHING.md  UPSTREAM_DIFFERENCES.md  USER_GUIDE.md  changelog.md
docs/superpowers/plans/: 2026-06-29-subscription-cache.md
docs/superpowers/specs/: 2026-06-29-subscription-cache-design.md
mainpage/: index.html  package.json  vite.config.mts
mainpage/src/: App.vue
mainpage/src/components/: AppShell.vue  BrandMark.vue  OptionControls.vue  ResultPanel.vue  SourceInput.vue  TemplateSelect.vue
mainpage/src/lib/: runtime-config.test.ts  runtime-config.ts  subscription-url.test.ts  subscription-url.ts
mainpage/src/styles/: main.css
src/: app.rs  error.rs  lib.rs  main.rs  ssrf.rs  subscription.rs  types.rs
src/cache/: disk.rs  layer.rs  memory.rs  mod.rs  subscription.rs
src/config/: app_config.rs  mod.rs  template_config.rs
src/converter/: anytls.rs  http_socks.rs  hysteria.rs  hysteria2.rs  mieru.rs  mod.rs  models.rs  proxy.rs  registry.rs  ss.rs  ssr.rs  telegram.rs  trojan.rs  tuic.rs  util.rs  vless.rs  vmess.rs
src/handlers/: config.rs  health.rs  mod.rs  provider.rs  proxy.rs  robots.rs  static_files.rs  sub.rs
src/packer/: group_builder.rs  mod.rs  provider.rs  types.rs
template/: general.yaml  meta-rules.yaml  zju.yaml
tests/: converter_parsers.rs
