[package]
name = "subconv"
version = "3.1.0"
edition = "2021"
description = "Subscription converter for Mihomo (Clash Meta) — Rust rewrite"
license = "MPL-2.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }

# Zero-copy byte buffer (O(1) clone via Arc)
bytes = "1"

# Error handling
thiserror = "2"

# URL parsing
url = "2"
urlencoding = "2"

# Base64
base64 = "0.22"

# Regex
regex = "1"

# Random
rand = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Streaming
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

# SHA256 for remote template verification + cache key
sha2 = "0.10"
hex = "0.4"

# Ordered map for YAML key ordering
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tempfile = "3"
